--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -96,3 +96,9 @@ redis.connection.timeout=60000
 
 redis.insights.index=12
 search.result.redis.ttl=600
+
+validation.required-fields.educationalQualification=degree,institutionName,startYear,endYear
+validation.required-fields.achievement=title,issuedOrganisation,issuedDate
+validation.required-fields.serviceHistory=orgName,designation,orgState,orgDistrict,startDate,endDate,currentlyWorking
+context.types=educationalQualifications,achievements,serviceHistory
+basic.profile.fields=id,channel,firstName,profiledetails,rootOrgId
