--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,19 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -205,54 +218,41 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.igot.cb.CbNetworkHubApplication</mainClass>
+                    <source>17</source>
+                    <target>17</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.24</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                        <include>**/*Tests.java</include>
-                        <include>**/Test*.java</include>
-                    </includes>
                     <excludes>
-                        <!-- Exclude abstract test classes or others you don't want to run directly -->
-                        <exclude>**/Abstract*.java</exclude>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
                     </excludes>
-                    <testSourceDirectory>src/test/java</testSourceDirectory>
-                    <argLine>
-                        @{argLine} <!-- Important for JaCoCo integration -->
-                        --add-opens java.base/java.lang=ALL-UNNAMED
-                        --add-opens java.base/java.util=ALL-UNNAMED
-                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                    </argLine>
-                    <forkCount>1</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <reportFormat>plain</reportFormat>
-                    <trimStackTrace>false</trimStackTrace>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.11</version> <!-- Latest version -->
+                <version>0.8.8</version>
                 <configuration>
                     <includes>
                         <include>com/igot/cb/*</include>
                         <include>com/igot/cb/**/*</include>
                     </includes>
-                    <excludes>
-                        <!-- Exclude model or generated classes if you don't want coverage on them -->
-                        <exclude>**/model/**</exclude>
-                        <exclude>**/dto/**</exclude>
-                        <exclude>**/config/**</exclude>
-                    </excludes>
                     <rules>
                         <rule>
                             <element>BUNDLE</element>
@@ -273,7 +273,6 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -290,7 +289,6 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
-                        <phase>verify</phase> <!-- Move check to verify phase -->
                     </execution>
                 </executions>
             </plugin>
