--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -102,3 +102,6 @@ validation.required-fields.achievement=title,issuedOrganisation,issuedDate
 validation.required-fields.serviceHistory=orgName,designation,orgState,orgDistrict,startDate,endDate,currentlyWorking
 context.types=educationalQualifications,achievements,serviceHistory
 basic.profile.fields=id,channel,firstName,profiledetails,rootOrgId
+profile.completion.required.fields=firstName,profilePicture,currentLocation,bannerImage,serviceHistory,educationalQualifications
+profile.completion.extended.fields=serviceHistory,educationalQualifications,location
+profile.completion.field.weight=16.7
